--- a/.env.production
+++ b/.env.production
@@ -2,5 +2,5 @@
 ENV = 'production'
 
 # base api
-VUE_APP_BASE_API = 'http://192.168.0.115:8080/hlProertyManage_war/'
+VUE_APP_BASE_API = 'http://121.41.28.29:8080/hlProertyManage'
 
