住宅电费提交添加业主姓名字段

--- a/.env.development
+++ b/.env.development
@@ -2,7 +2,7 @@
 ENV = 'development'
 
 # base api
-VUE_APP_BASE_API = 'http://121.41.28.29:8080/hlProertyManage'
+VUE_APP_BASE_API = 'http://192.168.0.115:8080/hlProertyManage_war'
 
 # vue-cli uses the VUE_CLI_BABEL_TRANSPILE_MODULES environment variable,
 # to control whether the babel-plugin-dynamic-import-node plugin is enabled.
