--- a/.env.production
+++ b/.env.production
@@ -2,5 +2,5 @@
 ENV = 'production'
 
 # base api
-VUE_APP_BASE_API = 'http://121.41.28.29:8080/hlOneParkProertyManage'
+VUE_APP_BASE_API = 'http://121.41.28.29/hlOneParkProertyManage'
 
