--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "url": "https://github.com/PanJiaChen/vue-element-admin/issues"
   },
   "dependencies": {
+    "@vue/babel-preset-app": "^4.5.6",
     "ali-oss": "^6.6.0",
     "axios": "0.18.1",
     "clipboard": "2.0.4",
