--- a/.env.development
+++ b/.env.development
@@ -5,6 +5,7 @@ ENV = 'development'
 # VUE_APP_BASE_API = 'https://result.eolinker.com/bhVWEUucb91e3f878ddddb0ecaf93092fa4732e8a4eb2e4?uri='
 # VUE_APP_BASE_API = 'http://192.168.31.86:8080/hlOneParkProertyManage/'
  VUE_APP_BASE_API = 'http://192.168.124.64:8080/hlOneParkProertyManage/'
+# VUE_APP_BASE_API = 'http://192.168.1.46:8080/hlOneParkProertyManage/'
 # VUE_APP_BASE_API = 'http://121.41.28.29:80/hlOneParkProertyManage/'
 
 # vue-cli uses the VUE_CLI_BABEL_TRANSPILE_MODULES environment variable,
