"zpf 修改数据统计-电费表格字段名"

--- a/.env.production
+++ b/.env.production
@@ -2,6 +2,8 @@
 ENV = 'production'
 
 # base api
- VUE_APP_BASE_API = 'http://121.41.28.29:80/hlOneParkProertyManage'
+#VUE_APP_BASE_API='http://192.168.0.101:8080/hlOneParkProertyManage'
+VUE_APP_BASE_API = 'http://121.41.28.29:80/hlOneParkProertyManage'
 # VUE_APP_BASE_API = 'http://39.106.28.159:8080/hlOneParkProertyManage'
+#VUE_APP_BASE_API = 'http://192.168.0.195:8080/hlOneParkProertyManage'
 
