--- a/.env.development
+++ b/.env.development
@@ -5,6 +5,7 @@ ENV = 'development'
 # VUE_APP_BASE_API = 'http://192.168.1.46:8080/hlOneParkProertyManage'
  VUE_APP_BASE_API = 'http://121.41.28.29:80/hlOneParkProertyManage'
 # VUE_APP_BASE_API = 'http://39.106.28.159:8080/hlOneParkProertyManage'
+ #VUE_APP_BASE_API = 'http://192.168.0.195:8080/hlOneParkProertyManage'
 
 # vue-cli uses the VUE_CLI_BABEL_TRANSPILE_MODULES environment variable,
 # to control whether the babel-plugin-dynamic-import-node plugin is enabled.
